ability to mark task as complete, update database, and re.render on DOM via tasksRouter.js, client.js, and styles.css files

--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -1,3 +1,13 @@
 body {
     background-color: aliceblue;
 }
+
+/* CSS when we mark a task complete */
+.addSomeGreen {
+   background-color: green;
+}
+
+/* CSS when a mark hasn't been marked completed yet */
+.addSomeGrey {
+    background-color: grey;
+}
