--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -11,3 +11,21 @@ body {
 .addSomeGrey {
     background-color: grey;
 }
+
+/* Adding some CSS to make things look a bit nicer */
+.title {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:xx-large;
+    color: navy;
+}
+
+.anotherTitle {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: larger;
+    color: navy;
+}
+
+.listTask {
+    font-family: Arial, Helvetica, sans-serif;
+    color: navy;
+}
